@startuml
GameRunLoop o-- GameStateManager
GameRunLoop o-- TileManager

GameStateManager o-- MapManager
GameStateManager o-- TransportManager

TransportManager o-- MapManager
TransportManager o-- BreadthFirstSearchRouting

HexagonNeighbourCalculator o-- MapManager

BreadthFirstSearchRouting o-- MapManager
BreadthFirstSearchRouting o-- HexagonNeighbourCalculator

BuildDialogHandler o-- GameStateManager

GameWorld o-- Context
GameWorld o-- TileManager

class TileManager {
    "Map<Coordinates, FlagTile>"
}
TileManager o-- FlagTile

class MapManager {
    "Map<Coordinates, Cell>"
}
MapManager o-- Cell

FlagTile o-- Cell
FlagTile o-- ModeController
FlagTile o-- Context
FlagTile o-- HexagonNeighbourCalculator
@enduml